--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,5 @@
 body {
-  font-family: 'Cambria', sans-serif;
+  font-family: 'Cambria';
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-}
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
 }
